chore: 프로젝트 구조 설계 - layout 파일 및 필수 activity 생성 - 프로젝트 구조 설계

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Battles"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name="com.umc.battles.ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
