feat: google login 기능 구현
- google library를 통한 account email 정보 얻기
   - Google Console에 패키지 및 디버그 키값을 등록함
   - 해당 credentials 파일을 받아와 앱단에 등록함
   - 라이브러리를 통해 로그인을 수행하고, email정보를 수신함

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -71,4 +72,7 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navi_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navi_version"
+
+    //google
+    implementation "com.google.android.gms:play-services-auth:$google_version"
 }
