--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,12 @@ buildscript {
         glide_version = "4.12.0"
         gson_version = "2.9.0"
         navi_version = "2.4.2"
+        google_version = "20.2.0"
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-
+        classpath 'com.google.gms:google-services:4.3.13'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
