--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=androidstudio,macos,windows,kotlin
 
 ### Kotlin ###
+*.json
 # Compiled class file
 *.class
 
