refactor: manifest 패키지 조정
- manifest 패키지 구조 조정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,16 @@
         android:theme="@style/Theme.Battles"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ProfileSettingActivity"
+            android:name=".ui.profile.ProfileSettingActivity"
             android:exported="false" />
         <activity
-            android:name=".EditProActivity"
+            android:name=".ui.profile.EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.auth.LoginActivity"
             android:exported="false" />
         <activity
             android:name="com.umc.battles.ui.splash.SplashActivity"
