--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         kotlin_version = "1.4.32"
         retrofit_version = "2.9.0"
         okHttp_version = "4.9.0"
-        roomdb_version = "2.3.0"
+        roomdb_version = "2.4.0-alpha03"
         glide_version = "4.12.0"
         gson_version = "2.9.0"
         navi_version = "2.4.2"
