ui: main navigation 추가
- main navigation 추가
   - profile을 제외한 나머지 fragment 동작 구현
- 전체 코드 reformatting

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navi_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navi_version"
+    implementation "androidx.navigation:navigation-runtime:$navi_version"
 
     //google
     implementation "com.google.android.gms:play-services-auth:$google_version"
