ui: home banner image 추가
- image 받아와서 수평 스크롤 및 카드뷰 구현
- indicator를 활용한 현재 위치를 표현
- 코루틴을 활용한 자동 스크롤 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
 
     //google
     implementation "com.google.android.gms:play-services-auth:$google_version"
+
+    //circle indicator for viewpager2
+    implementation 'me.relex:circleindicator:2.1.6'
 }
