ui: 게시판 상세 화면 구현
- 게시판 상세 화면 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Battles"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.main.board.detail.BoardActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.profile.ProfileSettingActivity"
             android:exported="false" />
         <activity
