ui: 글쓰기 화면 구성 -글쓰기 화면,댓글 다는 화면 구성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.Battles"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.main.board.CommentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.board.WritingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.main.board.detail.BoardActivity"
             android:exported="false" />
         <activity
