feat: Tutorial 화면 구성
- 튜토리얼 이미지를 받아와 화면에 적용함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".ui.main.board.detail.BoardActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.profile.ProfileSettingActivity"
+            android:name=".ui.auth.tutorial.TutorialActivity"
             android:exported="false" />
         <activity
             android:name=".ui.main.profile.editprofile.EditProfileActivity"
